--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-О себе
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Document</title>
+</head>
+<body>
+    <h1 class="h1">О себе йоу</h1>
+    <h2 class="h2">люблю черный</h2>
+</body>
+</html>
