--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 class="h1">О себе йоу</h1>
+    <h1 class="h1"> Изменения через feature-conflict</h1>
     <h2 class="h2">люблю черный</h2>
 </body>
 </html>
